Bug Fixing & QOL
CSS
- Polished the Pets Collected animation

Fixes
- Fixed Fish Page not having caches
- Fixed Figurines Page overlapping subchapters' caches
- Fixed accidental rounding on figurine images

QOL
- Removed the ability to select text and images

--- a/figurines.css
+++ b/figurines.css
@@ -2,6 +2,17 @@
   font-family: Starbound Font;
   src: url(Resources/Font/starbound-font.ttf);
 }
+
+/* Disable text selection */
+* {
+  user-select: none;
+}
+
+/* Disable image selection */
+img {
+  user-select: none;
+}
+
 body {
   font-family: Starbound Font;
   background-color: #111;
