--- a/rarePets.css
+++ b/rarePets.css
@@ -2,6 +2,17 @@
     font-family: Starbound Font;
     src: url(Resources/Font/starbound-font.ttf);
  }
+
+/* Disable text selection */
+* {
+  user-select: none;
+}
+
+/* Disable image selection */
+img {
+  user-select: none;
+}
+
 body {
     font-family: Starbound Font;
     background-color: #111;
@@ -92,6 +103,12 @@ body {
       filter: brightness(0) invert(1) hue-rotate(180deg) drop-shadow(0 0 20px red) drop-shadow(0 0 30px red);
     }
   }
+
+  /* Smooth scaling transition */
+img {
+  transition: transform 1.5s ease, filter 1.5s ease;
+}
+
   
   /* To make the Capture Pod image appear on top */
   .capture-pod-image {
@@ -105,8 +122,7 @@ body {
   
   /* When clicked, apply red and glow effect */
   .grid-item.clicked img {
-    animation: glow 1s forwards; /* Apply glow animation */
-    filter: brightness(0.5) hue-rotate(180deg) drop-shadow(0 0 10px red) drop-shadow(0 0 20px red);
+    animation: glow 1s infinite alternate; /* Apply glow animation */
   }
   
   /* Navbar Styles */
